@startuml

class Juego {
	+ jugar()
	+ obtenerDireccion() : Coordenada
	+ estaEnCurso() : bool
}

Juego --> Jugador
Juego --> Mapa

class Jugador {
	- movimientosRealizados : int

	' Igual podemos ver si un movimiento puede ser una clase. Asi por ejemplo
	' podriamos reconstruir el camino recorrido, porque cada movimiento en vez
	' de solo ser un valor, podria guardar su direccion y todo.
	+ agregarMovimientos(penalizacion : int)
	+ mover(mapa : Mapa, direccion : Coordenada)
	+ setPosicion(nuevaPosicion : Posicion)
}

Jugador -> Coordenada
Jugador --> Moto

class Moto {
	+ mover(mapa : Mapa)
}

class Mapa {
	+ elementoEnPosicion(posicion : Posicion) : Pozo
	+ posicionEstaDentroDeLimites(posicion : Posicion)
}

class Coordenada {
	- x : int
	- y : int

	+ getX() : int
	+ getY() : int
}

class Pozo {
	+ penalizacionMoto() : int
}

Mapa "1" *-- "*" Pozo

@enduml
